- include only health, logfile, metrics endpoints - move book endpoint url used in healthcheck to app props